--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.19",
     "nodemon": "^1.18.10",
-    "npm": "^6.9.0"
+    "npm": "^6.9.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
