--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/MzabiCoder/fullstack_StroryBook_Oauth_Node_#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "mongodb": "^3.1.13",
     "mongoose": "^5.4.19",
     "nodemon": "^1.18.10",
     "npm": "^6.9.0",
